--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Campus</title>
+    <title>Food Court</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,7 +31,7 @@
             </div>
             <div id="about-me" class= "half-width">
                 <h2>About Me</h2>
-                <p>Food Campus showcases inventive Bangladeshi cuisine by complementing the flavours and traditions of Bangladesh with global ingredients and techniques.Food campus also delivery the food in your door step. You can order any healthy food from the menu and we will deliver the food within 1 hour. Also we are maintaining standard level of hyeigine in the kitchen. Always we aware of customer health and safety. </p>
+                <p>Food Court showcases inventive Bangladeshi cuisine by complementing the flavours and traditions of Bangladesh with global ingredients and techniques.Food Court also delivery the food in your door step. You can order any healthy food from the menu and we will deliver the food within 1 hour. Also we are maintaining standard level of hyeigine in the kitchen. Always we aware of customer health and safety. </p>
                 <a class="link-button" target="_blank" href="https://www.doordash.com/en-CA">Contact US</a>
             </div>
         </div>
@@ -37,7 +40,7 @@
     <section>
         <div class="food-recipies">
             <h2>My Recipies</h2>
-            <p>Every dish at Food Campus has its own story from the traditional recipes direct from hamlet, to modern updates that tell the history of our team, of our cooks and chefs who have left their mark on our kitchen, and our serving staff and managers who have been ambassadors of hospitality. Our menu is never done - we find inspiration all around, in new ingredients, new approaches, and fresh takes on old standards.</p>
+            <p>Every dish at Food Court has its own story from the traditional recipes direct from hamlet, to modern updates that tell the history of our team, of our cooks and chefs who have left their mark on our kitchen, and our serving staff and managers who have been ambassadors of hospitality. Our menu is never done - we find inspiration all around, in new ingredients, new approaches, and fresh takes on old standards.</p>
         </div>
     </section>
     <section>
@@ -65,6 +68,10 @@
             </div>
         </div>
     </section>
+    <footer>
+        <h3><span>FOOD</span> COURT</h3>
+        <p>Eat healthy to live healthy, Live healthy to life happy</p>
+    </footer>
     
 </body>
 </html>
