--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="nav-bar">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#contact us">Contact US</a></li>
+            <li><a href="#recipies">Recipies</a></li>
+            <li><a href="#log in">Log In</a></li>
+            <li><a href="#sign up">Sign UP</a></li>
+        </ul>
+    </section>
     <section>
         <div class="half-width">
-            <h1><span class="orange-word">Skip</span>The Diet, Just Eat Healthy With Food Campus</h1>
+            <h1><span class="orange-word">Skip</span>The Diet, Just Eat Healthy With Food Court</h1>
             <p>Imagine you don't need a diet because we provide healthy and deilicious food for you in your door step!</p>
             <a class="link-button" target="_blank" href="https://www.doordash.com/en-CA">Order Food</a>
         </div>
