--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 </head>
 <body>
     <section class="nav-bar">
+        <p>Food Court</p>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#contact us">Contact US</a></li>
-            <li><a href="#recipies">Recipies</a></li>
-            <li><a href="#log in">Log In</a></li>
             <li><a href="#sign up">Sign UP</a></li>
+            <li><a href="#log in">Log In</a></li>
+            <li><a href="#recipies">Recipies</a></li>
+            <li><a href="#contact us">Contact US</a></li>
+            <li><a href="#home">Home</a></li>  
         </ul>
     </section>
     <section>
@@ -60,7 +61,6 @@
                 <p>Atta and Semolina puchkas, Salcutta jhal potato, Five waters
                     potato sphere chaat, White pea ragda, Kachalu, Green apple 
                     beet and Peanut butter chop. </p>
-
             </div>
             <div class="menu-img">
                 <img src="images/item-2.jpg" alt="">
@@ -76,6 +76,9 @@
                     tempered ricotta vada, Pao bhaji, Kafir lime butter pao 'chowpatty' in a bowl.</p>
             </div>
         </div>
+    </section>
+    <section>
+        
     </section>
     <footer>
         <h3><span>FOOD</span> COURT</h3>
