final commit set

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="link-button" target="_blank" href="https://www.doordash.com/en-CA">Order Food</a>
         </div>
         <div class="half-width">
-            <img src="images/female-1.png" alt="">
+            <img src="images/male-1.png" alt="">
         </div>
     </section>
     <section>
